@@ -5,11 +5,8 @@ plugins {
 description = "Builds, tests, and runs the project ImageBrowser."
 
 dependencies {
-    implementation(files("lib/AnimatedTransitions.jar"))
-    implementation(files("lib/TimingFramework-0.55.jar"))
-    // implementation(libs.timingframework.swing)
-    // implementation(libs.jdesktop.animation.timing)
-    // implementation(project(":java-net:animated-transitions-swing"))
+    implementation(libs.timingframework.swing)
+    implementation(project(":java-net:animated-transitions-swing"))
 }
 
 application {
@@ -18,10 +15,6 @@ application {
 
 tasks {
     withType<JavaExec>().configureEach {
-        // for lib/AnimatedTransitions.jar
-        // making JComponent::setFlag accessible
-        jvmArgs("--add-opens=java.desktop/javax.swing=ALL-UNNAMED")
-
         workingDir = projectDir
     }
 }
